# Photo2SearchablePDF

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  development.md  framework_ocr.py  main.py  opencv_filtering.py  pdf_compressor.py  process_scans.py  pyproject.toml  todo.md
examples/: process_scans.py
photo2pdf/: __init__.py  cli.py  image_ocr.py  keyword_extraction.py  language_detection.py  logger.py  main_processing.py  pdf_compressor.py  photo_preprocessing.py  string_cleaning.py
subsys/: cli.py  date_extraction.py  image_ocr.py  keyword_extraction.py  language_detection.py  main_processing.py  photo_preprocessing.py  string_cleaning.py
