# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "photo2pdf"
version = "0.0.1"
description = "Creates searchable PDFs from photos of documents"
readme = "README.md"

dependencies = [
    "cv3",
    "pytesseract",
    "dateparser",
    "types-dateparser",
    "langid",
    "rake-nltk",
    "numpy",
    "chromalog",
    "stop-words",
    "typing-extensions",
    "typer>=0.21.0",
    "pillow",
    "matplotlib",
    # dev
    "prek", # pre-commit plugin-replacement
    "bump2version",
    "ruff",
    "ty",
]
requires-python = ">=3.13"

[tool.uv]
package = false

[tool.uv.sources]

[tool.setuptools]

[tool.ty.environment]
root = ["./"]
# TODO: renaming dirs could 'repair' autodiscovery

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["*/tests/**"]

[tool.ty.rules]
unresolved-import = "ignore"
missing-argument = "ignore"
