# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "photo2pdf"
version = "0.1.0"
description = "Creates searchable PDFs from scans or photos of documents"
readme = "README.md"

dependencies = [
    "cv3",
    "pytesseract",
    "dateparser",
    "types-dateparser",
    "langid",
    "rake-nltk",
    "numpy",
    "chromalog",
    "stop-words",
    "typing-extensions",
    "typer>=0.21.0",
    "pillow",
    "matplotlib",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "prek", # pre-commit plugin-replacement
    "bump2version",
    "ruff",
    "ty",
]

test = [
    "pytest",
    "pytest-click",
    "pytest-dependency",
    "pytest-timeout",
    "coverage",
]

all = ["photo2pdf[dev, test]"]

[project.scripts]
photo2pdf = "photo2pdf.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["unix", "linux", "osx", "cygwin", "win32", "win64"]
package-dir = {"photo2pdf" = "./photo2pdf/"}
zip-safe = true
include-package-data = true

[tool.uv]
package = false

[tool.uv.sources]

[tool.ty.environment]
root = ["./"]
# TODO: renaming dirs could 'repair' autodiscovery

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["*/tests/**"]

[tool.ty.rules]
unresolved-import = "ignore"
missing-argument = "ignore"
